--- a/index.html
+++ b/index.html
@@ -1,46 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Japan Travel Page</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body class="hero-bg">
-  <section>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Landing Page - Japan v5</title>
+    <link rel="stylesheet" href="styles.css">
+                      <!-- fav icon -->
+<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+  </head>
+<body>
+  <div class="landing">
     <nav>
-      <div class="left-hamburger-icon">
-        <div class="icons"></div>
-        <div class="icons"></div>
-        <div class="icons"></div>
+      <div class="snav">
+        <div class="hamburger-menu">
+          <div id="topline" class="line line-1"></div>
+          <div id="middleline" class="line line-2"></div>
+          <div id="bottomline" class="line line-3"></div>
+        </div>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#culture" class="nav-link">Culture</a>
+          </li>
+          <li class="nav-item">
+            <a href="#climate" class="nav-link">Climate</a>
+          </li>
+          <li class="nav-item">
+            <a href="#planner" class="nav-link">Trip Planner</a>
+          </li>
+        </ul>
       </div>
-      <div class="right-hamburger-icon">
-        <div class="icons2"></div>
-        <div class="icons2"></div>
-        <div class="icons2"></div>
+      <div class="main-nav">
+        <ul>
+          <a href="#">
+            <li>Home</li>
+          </a>
+          <a href="#culture">
+            <li>Culture</li>
+          </a>
+          <a href="#climate"> 
+            <li>Climate</li>
+          </a>
+          <a href="#planner">
+            <li>Trip Planner</li>
+          </a>
+        </ul>
       </div>
-      <ul class="h-nav">
-        <li>Culture</li>
-        <li>Nature</li>
-        <li>Climate</li>
-        <li>Trip Planner</li>
-      </ul>
-      <ul class="s-nav">
-        <li>home</li>
-        <li>culture</li>
-        <li>nature</li>
-        <li>trip planner</li>
-      </ul>
+      <img class="search-icon" src="/images/search.png">
     </nav>
-    <div class="container1">
-      <h1>Japan</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Aliquam ante leo, condimentum sit amet risus sed,
-cursus molestie enim. Phasellus quis faucibus enim.</p>
-    <button type="button">Learn More</button>
+    <div class="grid-container">
+      <main>
+        <h1>Travel To<span>Japan.</span></h1>
+          <p class="desc">
+            2Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+            Illo rerum quam tenetur molestiae voluptas similique assumenda<br>
+            minima iure. Et, pariatur.
+          </p>
+          <a href="info.html">
+            <button type="button">Learn More</button>
+          </a>
+      </main>
+      <section class="slideshow">
+        <img src="/images/kyoto.jpg" alt="">
+      </section>
     </div>
-    <img id="hero" src="../images/Charles Postiaux.png" alt="">
-  </section>
+  </div> 
+  <section class="sec" id="culture">Culture</section>
+  <section class="sec" id="climate">Climate</section>
+  <section class="sec" id="planner">Trip Planner</section>
+  <script src="script.js"></script>
 </body>
 </html>
